# espClock

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_main.c  idf_component.yml
main/Inc/: us_gpio.h  us_lcd_touch.h  us_nvs.h  us_rgb_lcd.h  us_spiffs.h  us_timer.h
main/net/: us_ap.c  us_ap.h  us_api.c  us_wifi.c
main/src/: us_gpio.c  us_lcd_touch.c  us_nvs.c  us_rgb_lcd.c  us_spiffs.c  us_timer.c  us_ui.c
main/ui/: ui.c  ui.h
main/ui/images/: ui_img_pic1_png.c  ui_img_pic2_png.c  ui_img_pic3_png.c
