idf_component_register(SRCS 
                        "app_main.c"
                        "./src/us_timer.c"
                        "./src/us_spiffs.c"
                        "./src/us_nvs.c"
                        "./src/us_gpio.c"
                        "./src/us_rgb_lcd.c"
                        "./net/us_ap.c"
                        "./net/us_wifi.c"
                        "./ui/ui.c"
                        "./ui/images/ui_img_pic1_png.c"
                        "./ui/images/ui_img_pic2_png.c"
                        "./ui/images/ui_img_pic3_png.c"
                    INCLUDE_DIRS 
                        "."
                        "./Inc"
                        "./ui")
